# sensai-plugin

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
bootstrap/: MANIFEST.sha256  install-sensai.ps1
contracts/: mcp-surface-v1.json
docs/: DEVELOPMENT.md
docs/specs/: FIRST-CONTACT-001.md  PLUGIN-CLAUDE-LIFECYCLE.md  PLUGIN-CODEX-LIFECYCLE.md  PLUGIN-PACKAGE-001.md  PUBLIC-MARKETPLACE-001.md
payload-src/claude/.claude-plugin/: plugin.json
payload-src/codex/.codex-plugin/: plugin.json
payload-src/shared/: .mcp.json
payload-src/shared/skills/sensai/: SKILL.md
plugins/sensai/: .mcp.json  MANIFEST.sha256
plugins/sensai/.claude-plugin/: plugin.json
plugins/sensai/.codex-plugin/: plugin.json
scripts/: build_release.py  sync_public_marketplace.py  test_claude_lifecycle.py  test_codex_lifecycle.py  verify_release.py
src/sensai_plugin/: __init__.py  claude_acceptance.py  codex_acceptance.py  package_builder.py  package_runner.py  recovery_policy.py  release_builder.py  release_verifier.py
tests/: conftest.py  test_automation_execution_handoff.py  test_claude_release_lifecycle.py  test_codex_lifecycle.py  test_codex_terminal_wait_contract.py  test_first_use_contract.py  test_github_first_contract.py  test_package_builder_red.py  test_package_runner.py  test_project_package_install.py  test_public_marketplace.py  test_recovery_policy.py  test_release_artifact.py  test_release_verifier_pagination.py  test_trusted_server_package.py  test_windows_bootstrap_contract.py
tests/fixtures/: codex_terminal_wait_empty_poll.json  scenario_relay_contract.json
(+2 files in other folders)
