[project]
name = "sensai-plugin-build"
version = "0.1.0"
description = "Deterministic public plugin packaging for Sensai"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mcp==1.28.1",
  "mypy>=1.17.1,<2",
  "pytest>=8.4.1,<9",
  "ruff>=0.12.4,<1",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "claude_real_cli: expensive lifecycle acceptance against the installed official Claude CLI",
  "codex_real_cli: expensive lifecycle acceptance against the installed official Codex CLI",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sensai_plugin"]
